Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -614,7 +614,8 @@
    "source": [
     "\"art.vandelay@vandelay.co\" # False\n",
     "help(str\n",
-    ")\n"
+    ")\n",
+    "name.endswi\n"
    ]
   },
   {
