--- a/index.ipynb
+++ b/index.ipynb
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -609,13 +609,23 @@
       " |      must be a string, whose characters will be mapped to None in the result.\n",
       "\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "\"art.vandelay@vandelay.co\" # False\n",
     "help(str\n",
     ")\n",
-    "name.endswi\n"
+    "name.endswith(\"m\")\n"
    ]
   },
   {
